# assignment_make-it-roll

./: CMakeLists.txt  README.md
app/scripts/: assignment_make-it-roll-app-icub.xml  assignment_make-it-roll-app-icubSim.xml  assignment_make-it-roll-app.xml  assignment_make-it-roll-system.xml  system.xml
gazebo/models/assignment_make-it-roll-ball/: model.config  model.sdf
gazebo/models/assignment_make-it-roll-table/: model.config  model.sdf
gazebo/worlds/: assignment_make-it-roll.sdf
smoke-test/: CMakeLists.txt  post-test.sh  pre-test.sh  test.cpp  test.xml
smoke-test/fixtures/: fixture.xml
src/: CMakeLists.txt  helpers.cpp  helpers.h  main.cpp  world.cpp
